<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>uk.co.bithatch</groupId>
    <artifactId>opensim-console2mcp</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Opensimulator REST Console to MCP bridge</name>

    <properties>
        <mcp.version>0.11.3</mcp.version>
        <jetty.version>12.0.37</jetty.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>uk.co.bithatch</groupId>
            <artifactId>opensim-jlib</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>4.7.6</version>
        </dependency>
        <dependency>
            <groupId>io.modelcontextprotocol.sdk</groupId>
            <artifactId>mcp</artifactId>
            <version>${mcp.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty.ee10</groupId>
            <artifactId>jetty-ee10-servlet</artifactId>
            <version>${jetty.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-nop</artifactId>
            <version>2.0.17</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>info.picocli</groupId>
                            <artifactId>picocli-codegen</artifactId>
                            <version>4.7.6</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
                    </compilerArgs>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>native-image</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>0.10.2</version>
                        <executions>
                            <execution>
                                <id>opensim-console2mcp-native</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <configuration>
                                    <metadataRepository>
                                        <enabled>true</enabled>
                                    </metadataRepository>
                                    <mainClass>
                                        uk.co.bithatch.opensim.console2mcp.OpensimConsole2MCP</mainClass>
                                    <imageName>opensim-console2mcp</imageName>
                                    <buildArgs>
                                        <buildArg>--no-fallback</buildArg>
                                        <buildArgs>-march=compatibility</buildArgs>
                                        <buildArgs>-H:+SharedArenaSupport</buildArgs>
                                        <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
                                        <buildArg>--enable-url-protocols=http,https</buildArg>
                                    </buildArgs>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <repositories>
        <repository>
            <id>oss-snapshots</id>
            <url>https://central.sonatype.com/repository/maven-snapshots</url>
            <snapshots />
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>
</project>